devel
-----

* Fixed UPSERT in cluster: It does now read it's own write, which should prevent
  unique contraint violations, due to double inserts of the same document.

* Fixed two bogus messages about hotbackup restore:
  - Coordinators unconditionally logged the message "Got a hotbackup restore
    event, getting new cluster-wide unique IDs..." on shutdown. This was not
    necessarily related to a hotbackup restore.
  - DB servers unconditionally logged the message "Strange, we could not 
    unregister the hotbackup restore callback." on shutdown, although this was
    meaningless.

* Rename "save" return attribute in AQL function `DATE_UTCTOLOCAL` to "dst".

* Make ReplicationFeature formally depend on ServerIdFeature, because the
  former relies on the server id being already loaded by the latter.
  If this dependency is not established properly, it is undefined if the
  ReplicationFeature starts earlier than the ServerIdFeature, which can lead
  to the ReplicationFeature not sending its server id properly to the leader
  when doing replication between two single servers.

* Fix potentially undefined behavior when creating a CalculationTransactionContext
  for an arangosearch analyzer. An uninitialized struct member was passed as an
  argument to its base class. This potentially had no observable effects, but
  should be fixed.

* Retry a cluster internal network request if the connection comes from the
  pool and turns out to be stale (connection immediately closed). This fixes
  some spurious errors after a hotbackup restore.

* Fix progress reporting for arangoimport with large files on Windows.
  Previously, progress was only reported for the first 2GB of data due to a
  int overflow.

* Log the actual signal instead of "control-c" and also include the process id
  of the process that sent the signal.

* Fixed Github issue #13665: Improve index selection when there are multiple
  candidate indexes.
