@@ -234,7 +234,7 @@ void methods::Upgrade::registerTasks(arangodb::UpgradeFeature& upgradeFeature) {
   addTask(upgradeFeature, "createSystemStatisticsDBServer",
           "creates the statistics system collections including their indices",
       /*system*/ Flags::DATABASE_SYSTEM,
-      /*cluster*/ Flags::CLUSTER_NONE | Flags::CLUSTER_DB_SERVER_LOCAL,
+      /*cluster*/ Flags::CLUSTER_NONE | Flags::CLUSTER_COORDINATOR_GLOBAL,
       /*database*/ DATABASE_INIT | DATABASE_UPGRADE | DATABASE_EXISTING,
           &UpgradeTasks::createStatisticsCollectionsAndIndices);
   addTask(upgradeFeature, "addDefaultUserOther", "add default users for a new database",
